<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/colorLightBlue"
    tools:context=".MainActivity">





    <EditText
        android:id="@+id/firstNumber"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/rectangle"
        android:layout_marginEnd="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:hint="@string/firstNum"
        tools:ignore="Autofill"
        android:inputType="numberSigned" />

    <EditText
        android:id="@+id/secondNumber"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_toEndOf="@+id/firstNumber"
        android:layout_alignParentEnd="true"
        android:background="@drawable/rectangle"
        android:layout_marginStart="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/secondNum"
        tools:ignore="Autofill"
        android:inputType="numberSigned" />

    <TextView
        android:id="@+id/resultText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/result_box"
        android:text="@string/result"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:background="@drawable/button"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="100dp"
        android:text="@string/add"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/subButton"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/button"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="100dp"
        android:textColor="@color/white"
        android:text="@string/sub"
        android:textSize="24sp" />

    <Button
        android:id="@+id/mulButton"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/button"
        android:layout_marginStart="100dp"
        android:layout_marginTop="420dp"
        android:layout_marginEnd="100dp"
        android:textColor="@color/white"
        android:text="@string/mul"
        android:textSize="24sp" />

    <Button
        android:id="@+id/divButton"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/button"
        android:layout_marginStart="100dp"
        android:layout_marginTop="500dp"
        android:layout_marginEnd="100dp"
        android:textColor="@color/white"
        android:text="@string/div"
        android:textSize="24sp" />




</RelativeLayout>